--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
             <!-- 管理第三方依赖版本 -->
             <dependency>
                 <groupId>org.redisson</groupId>
+                <artifactId>redisson</artifactId>
+                <version>${redisson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.redisson</groupId>
                 <artifactId>redisson-spring-boot-starter</artifactId>
                 <version>${redisson.version}</version>
             </dependency>
